# DroneML

./: .gitignore  README.md  __init__.py  coeusai.py  coeusai_dialog.py  droneml.py  droneml_dialog.py  droneml_dialog_base.ui  metadata.txt  pyproject.toml  resources.py  resources.qrc  utils.py
.github/workflows/: release.yaml  release_zip.yaml
